# COMP7082_Group_8

./: .gitignore  README.md  config.py  frontend.py  pyproject.toml  requirements-ci.txt  requirements.txt  server.py  ui_app.py
.github/workflows/: ci.yml
audio/: mic.py  speech_recognition.py  utils.py  vad.py  wav_io.py
audio/vad/: __init__.py  detector.py  stream.py  utils.py
backend/: __init__.py  ai_engine.py  app.py  audio_loop.py  hw_detect.py  intent.py  listener.py  live_state.py  llm_bootstrap.py  llm_model_manager.py  llm_runtime.py  logging_setup.py  main.py  pipeline.py  schemas.py
backend/api/: app.py  schemas.py
backend/api/routes/: audio.py  chat.py  control.py  health.py  live.py  transcription.py
backend/asr/: __init__.py  whisper.py
backend/core/: __init__.py  pipeline.py  ports.py
backend/listener/: __init__.py  intents.py  live_state.py  loop.py  runner.py
backend/llm/: __init__.py  bootstrap.py  model_manager.py  runtime_llama_cpp.py  runtime_local.py
backend/middleware/: graceful_cancel.py
backend/routes/: chat.py  control.py  health.py  live.py  transcription.py
backend/tts/: engine.py
backend/util/: hw_detect.py  logging_setup.py  paths.py
frontend/: components.py  handlers.py
memory/: conversation.py
scripts/: list-mics.py  list_mics_safe.py  record_and_transcribe.py
tests/: conftest.py
tests/audio/: test_audio_components.py
tests/config/: test_settings.py
tests/memory/: test_conversation.py
ui/: __init__.py  actions.py  api.py  app.py  components.py  handlers.py  poller.py  styles.py
(+6 files in other folders)
