[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvin-local"
version = "0.1.0"
description = "Local voice assistant (Jarvin) – modularized backend, audio, and UI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jarvin Team" }]

# Intentionally not listing dependencies here to avoid diverging from requirements.txt.
# Keep using `pip install -r requirements.txt` for runtime deps.

[tool.setuptools.packages.find]
include = ["backend", "audio", "ui", "memory"]
exclude = ["scripts", "models", "temp"]

[tool.setuptools]
py-modules = ["config"]
