[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvin-local"
version = "0.1.0"
description = "Local voice assistant (Jarvin) – modularized backend, audio, and UI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jarvin Team" }]

[tool.setuptools.packages.find]
include = ["backend", "audio", "ui", "memory"]
exclude = ["scripts", "models", "temp"]

[tool.setuptools]
py-modules = ["config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as asyncio-based",
]
